# NEWS-URL-RESEARCH-BOT-FAISS

./: README.md  app.py  pyproject.toml
faiss_store/: index.faiss  index.pkl
notebooks/: URL_BOT(map-reduce_method) .ipynb  URL_BOT(stuff_method).ipynb
